# Fluyer

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  bun.lockb  eslint.config.js  package.json  prettier.config.mjs  setup-workflow.sh  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
dockerfiles/: linux.Dockerfile
infra/: android.sh  linux.sh  macos.sh  windows.sh
scripts/: generate-updater-json.ts  install-bass.ts  install-ffmpeg.ts  install-helpers.ts  install-libmpv-windows.ts  install-libmpv.ts  install-libs-macos.ts  setup-workflow.sh  sync-version.ts  tauri-android-build.ts  tauri-android-configure.ts  tauri-android-dev.ts  tauri-android-initialize.ts  tauri-build.ts  tauri-configure.ts  tauri-dev.ts  tauri-init-android.ts  tauri-init.ts  tauri-initialize.ts
src/: app.html  app.scss  backend.rs  background_generator.rs  logging.rs  main.rs  music_scanner.rs  ui_setup.rs  viewmodel.rs  window_utils.rs
src-tauri/: ._test-music.flac  .gitignore  Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: animated_background.rs  app_setup.rs  commands.rs  events.rs  file.rs  lib.rs  linux_renderer.rs  logger.rs  main.rs  music.rs  platform.rs  renderer.rs  state.rs  store.rs  tests.rs  wgpu_renderer.rs
src-tauri/src/api/: mod.rs  musicbrainz.rs
src-tauri/src/commands/: coverart.rs  decorum.rs  developer.rs  folder.rs  log.rs  mobile.rs  mod.rs  music.rs  playlist.rs  route.rs
src-tauri/src/coverart/: cache.rs  commands.rs  mod.rs  queue.rs  request.rs  types.rs
src-tauri/src/database/: database.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/folder/: commands.rs  database.rs  mod.rs  scanner.rs  types.rs  utils.rs
src-tauri/src/lyric/: cache.rs  commands.rs  queue.rs  request.rs  types.rs
src-tauri/src/music/: bass.rs  image.rs  image_cache.rs  media_session.rs  metadata.rs  mod.rs  player.rs
src-tauri/src/music/commands/: directory.rs  library.rs  metadata.rs  mod.rs  player.rs  playlist.rs  queue.rs  visualizer.rs
src-tauri/src/playlist/: commands.rs  mod.rs  playlist.rs
src-tauri/src/sidebar/: mod.rs  sidebar.rs
src-tauri/src/system/: commands.rs
src-tauri/src/utils/: image.rs  mod.rs  toast.rs
src-tauri/tauri-plugin-fluyer/: Cargo.toml  README.md  build.rs  bun.lockb  package.json  rollup.config.js
src-tauri/tauri-plugin-fluyer/android/: .gitignore  build.gradle.kts  local.properties
src-tauri/tauri-plugin-fluyer/android/src/androidTest/java/: ExampleInstrumentedTest.kt
src-tauri/tauri-plugin-fluyer/android/src/main/: AndroidManifest.xml
src-tauri/tauri-plugin-fluyer/android/src/main/java/: FluyerMain.kt  FluyerMediaControl.kt  FluyerMetadata.kt  FluyerPlayer.kt  FluyerPlugin.kt  FluyerVisualizer.kt  MediaControlReceiver.kt
src-tauri/tauri-plugin-fluyer/android/src/main/java/utils/: FileUtil.kt
src-tauri/tauri-plugin-fluyer/android/src/test/java/: ExampleUnitTest.kt
src-tauri/tauri-plugin-fluyer/guest-js/: index.ts
src-tauri/tauri-plugin-fluyer/ios/: Package.swift  README.md
src-tauri/tauri-plugin-fluyer/ios/Sources/: FluyerPlugin.swift
src-tauri/tauri-plugin-fluyer/permissions/: default.toml
src-tauri/tauri-plugin-fluyer/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-fluyer/permissions/schemas/: schema.json
src-tauri/tauri-plugin-fluyer/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src/lib/: BlurBackground.svelte  Music.ts  MusicController.ts  commands.ts  pages.ts  platform.ts  stores.ts
src/lib/actions/: showThenFade.ts
src/lib/api/: LrcLib.ts  api.ts  lrclib.ts  musicbrainz.ts  spotify.ts
src/lib/backgrounds/: AnimatedBackground.svelte  ColorsBackground.svelte  MobileBackground.svelte  background.scss  types.ts
src/lib/components/: Button.svelte  Input.svelte  ProgressBar.svelte  Toggle.svelte  View.svelte
src/lib/constants/: CommandRoutes.ts  Modal.ts  MusicConfig.ts  PageRoutes.ts  TauriCommands.ts  music.ts
src/lib/controllers/: BackgroundController.ts  FilterController.ts  FolderController.ts  LibraryPlaylistController.ts  LoadingController.ts  LyricController.ts  MobileController.ts  MusicController.ts  PageController.ts  PersistentStoreController.ts  ToastController.ts  UIController.ts  UtilsController.ts
src/lib/developer/: DeveloperDebugOverlay.svelte
src/lib/filterbar/: FilterBar.svelte
src/lib/font/: Font.svelte
src/lib/glass/: Glass.svelte  types.ts
src/lib/handlers/: coverart.ts  log.ts  toast.ts
src/lib/home/: Album.svelte  playerbar.scss
src/lib/icon/: Icon.svelte  registry.ts  types.ts
src/lib/loading/: Loading.svelte  LoadingController.ts  stores.ts
src/lib/mobile/: HeadsetChange.svelte  SwipeGuide.svelte
src/lib/scss/: backdrop.scss  components.scss  linux.scss  progress-bar.scss  rounded-windows.scss  scrollbar.scss  show-then-fade.scss  sidebar.scss  text-linux.scss  text-opacity-background.scss  toast.scss
src/lib/searchbar/: SearchBar.svelte
src/lib/services/: CoverArtService.svelte.ts  FolderService.svelte.ts  LibraryService.svelte.ts  LogService.svelte.ts  LyricService.svelte.ts  MetadataService.svelte.ts  MobileService.svelte.ts  ModalService.svelte.ts  MusicPlayerService.svelte.ts  PageService.svelte.ts  PersistentStoreService.svelte.ts  PlaylistService.svelte.ts  ProgressService.svelte.ts  QueueService.svelte.ts  SidebarService.svelte.ts  ToastService.svelte.ts  UIInteractionService.svelte.ts  UpdateService.svelte.ts
src/lib/settings/: SettingButton.svelte  SettingInput.svelte  SettingLabel.svelte
src/lib/stores/: background.ts  coverart.ts  equalizer.svelte.ts  equalizer.ts  filter.svelte.ts  (+27 more)
src/routes/: +layout.svelte  +page.svelte  page.scss
src/services/: image_service.rs  metadata_service.rs  mod.rs  music_service.rs
static/lotties/: swipe-left.json  swipe-left.webm  swipe-right.json  swipe-right.webm
ui/: app-window.slint
(+151 files in other folders)
