[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
i-slint-backend-winit = "=1.14.1"
winit = "0.30.12"

[build-dependencies]
slint-build = "1.14.1"
