[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
i-slint-backend-winit = "=1.14.1"
winit = "0.30.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSView"] }

[build-dependencies]
slint-build = "1.14.1"
