[package]
name = "fluyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-skia"] }
i-slint-backend-winit = "=1.14.1"
winit = "0.30.12"
image = "0.25.9"
rand = "0.9.2"
libblur = "0.21.0"
simplelog = "0.12.2"
log = "0.4.29"
walkdir = "2.5.0"
serde_json = "1.0"
num_cpus = "1.16"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSView"] }

[build-dependencies]
slint-build = "1.14.1"
