[package]
name = "fluyer"
version = "1.2.0"
description = "🦋🎵 Music Player"
authors = ["alvindimas05"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluyer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1", features = ["derive"] }
walkdir = "2.5.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-fluyer = { path = "./tauri-plugin-fluyer" }
regex = "1.11.1"
tauri-plugin-decorum = "1.1.1"
image = "0.25.9"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls-no-provider"] }
lazy_static = "1.5.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
rayon = "1.11.0"
base64-simd = "0.8.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.41"
rusqlite_migration = "2.3.0"
tokio = { version = "1.49.0", features = ["process"] }
# fast_image_resize = { version = "5.3.0", features = ["rayon", "image"] }
state = "0.6.0"
serde_json = "1.0.148"
futures = "0.3.31"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }

[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.6.1"

[profile.dev]
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
