[package]
name = "tauri-plugin-fluyer"
version = "1.1.0"
authors = [ "alvindimas05" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/node_modules"]
links = "tauri-plugin-fluyer"

[dependencies]
tauri = { version = "2.5.0", features = ["specta"] }
serde = "1.0"
thiserror = "2"
serde_json = "1.0.133"
specta = "=2.0.0-rc.20"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
tauri-build = "2.2.0"
